chore: bump cli-app-scripts
to bump UI library too and avoid propTypes warnings in React 18

--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2024-09-24T09:57:43.535Z\n"
-"PO-Revision-Date: 2024-09-24T09:57:43.535Z\n"
+"POT-Creation-Date: 2024-10-08T14:11:47.949Z\n"
+"PO-Revision-Date: 2024-10-08T14:11:47.949Z\n"
 
 msgid "Create New Route"
 msgstr "Create New Route"
@@ -22,6 +22,15 @@ msgstr "Name"
 
 msgid "URL"
 msgstr "URL"
+
+msgid "Authentication"
+msgstr "Authentication"
+
+msgid "Authorities"
+msgstr "Authorities"
+
+msgid "No routes configured yet."
+msgstr "No routes configured yet."
 
 msgid "Test"
 msgstr "Test"
@@ -65,6 +74,18 @@ msgstr "Body to pass to route"
 msgid "Body of request"
 msgstr "Body of request"
 
+msgid "Authentication Scheme"
+msgstr "Authentication Scheme"
+
+msgid "Username"
+msgstr "Username"
+
+msgid "Password"
+msgstr "Password"
+
+msgid "Token"
+msgstr "Token"
+
 msgid "Route saved successfully"
 msgstr "Route saved successfully"
 
@@ -88,3 +109,12 @@ msgstr "e.g. https://postman-echo.com/get"
 
 msgid "URL for route destination"
 msgstr "URL for route destination"
+
+msgid "Restrict access to cerain authorities"
+msgstr "Restrict access to cerain authorities"
+
+msgctxt "AUTHORITY"
+msgid "comma separated list of authorities i.e. MY_1,MY_AUTHORITY"
+msgid_plural "comma separated list of authorities i.e. MY_1,MY_AUTHORITY"
+msgstr[0] ""
+msgstr[1] "comma separated list of authorities i.e. MY_AUTHORITY_1,MY_AUTHORITY_2"
