--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,50 +5,14 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2024-10-08T14:11:47.949Z\n"
-"PO-Revision-Date: 2024-10-08T14:11:47.949Z\n"
-
-msgid "Create New Route"
-msgstr "Create New Route"
-
-msgid "ID"
-msgstr "ID"
-
-msgid "Code"
-msgstr "Code"
-
-msgid "Name"
-msgstr "Name"
-
-msgid "URL"
-msgstr "URL"
-
-msgid "Authentication"
-msgstr "Authentication"
-
-msgid "Authorities"
-msgstr "Authorities"
-
-msgid "No routes configured yet."
-msgstr "No routes configured yet."
-
-msgid "Test"
-msgstr "Test"
-
-msgid "Edit Route"
-msgstr "Edit Route"
-
-msgid "Delete"
-msgstr "Delete"
+"POT-Creation-Date: 2025-02-11T16:00:40.018Z\n"
+"PO-Revision-Date: 2025-02-11T16:00:40.018Z\n"
 
 msgid "Failed to invoke route: {{error}}"
 msgstr "Failed to invoke route: {{error}}"
 
 msgid "Route invoked successfully"
 msgstr "Route invoked successfully"
-
-msgid "Close"
-msgstr "Close"
 
 msgid "Test Route"
 msgstr "Test Route"
@@ -65,6 +29,9 @@ msgstr "Route URL"
 msgid "Wildcard path"
 msgstr "Wildcard path"
 
+msgid "Query Params"
+msgstr "Query Params"
+
 msgid "Use valid JSON for this field (i.e. double quoted properties etc..)"
 msgstr "Use valid JSON for this field (i.e. double quoted properties etc..)"
 
@@ -73,6 +40,21 @@ msgstr "Body to pass to route"
 
 msgid "Body of request"
 msgstr "Body of request"
+
+msgid "Authorities"
+msgstr "Authorities"
+
+msgid "Restrict access to cerain authorities"
+msgstr "Restrict access to cerain authorities"
+
+msgid "Select authorities"
+msgstr "Select authorities"
+
+msgid "Clear"
+msgstr "Clear"
+
+msgid "No authority found"
+msgstr "No authority found"
 
 msgid "Authentication Scheme"
 msgstr "Authentication Scheme"
@@ -110,11 +92,50 @@ msgstr "e.g. https://postman-echo.com/get"
 msgid "URL for route destination"
 msgstr "URL for route destination"
 
-msgid "Restrict access to cerain authorities"
-msgstr "Restrict access to cerain authorities"
+msgid "Edit"
+msgstr "Edit"
 
-msgctxt "AUTHORITY"
-msgid "comma separated list of authorities i.e. MY_1,MY_AUTHORITY"
-msgid_plural "comma separated list of authorities i.e. MY_1,MY_AUTHORITY"
-msgstr[0] ""
-msgstr[1] "comma separated list of authorities i.e. MY_AUTHORITY_1,MY_AUTHORITY_2"
+msgid "Sharing"
+msgstr "Sharing"
+
+msgid "Delete"
+msgstr "Delete"
+
+msgid "Are you sure you want to delete this route?"
+msgstr "Are you sure you want to delete this route?"
+
+msgid "Confirm"
+msgstr "Confirm"
+
+msgid "Cancel"
+msgstr "Cancel"
+
+msgid "Failed to delete route {{message}}"
+msgstr "Failed to delete route {{message}}"
+
+msgid "Failed to update route {{message}}"
+msgstr "Failed to update route {{message}}"
+
+msgid "Create New Route"
+msgstr "Create New Route"
+
+msgid "ID"
+msgstr "ID"
+
+msgid "Code"
+msgstr "Code"
+
+msgid "Name"
+msgstr "Name"
+
+msgid "URL"
+msgstr "URL"
+
+msgid "Authentication"
+msgstr "Authentication"
+
+msgid "No routes configured yet."
+msgstr "No routes configured yet."
+
+msgid "Test route"
+msgstr "Test route"
