--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2025-11-25T12:12:23.101Z\n"
-"PO-Revision-Date: 2025-11-25T12:12:23.101Z\n"
+"POT-Creation-Date: 2025-11-25T11:22:10.945Z\n"
+"PO-Revision-Date: 2025-11-25T11:22:10.945Z\n"
 
 msgid "Failed to invoke route: {{error}}"
 msgstr "Failed to invoke route: {{error}}"
@@ -88,6 +88,15 @@ msgstr "Password"
 
 msgid "Token"
 msgstr "Token"
+
+msgid "Client ID"
+msgstr "Client ID"
+
+msgid "Client Secret"
+msgstr "Client Secret"
+
+msgid "Token URI"
+msgstr "Token URI"
 
 msgid "Route saved successfully"
 msgstr "Route saved successfully"
